fix: 목록 오류 수정
- 반응형에 따른 목록 칼럼 개수 변경 수정
- 레이아웃 수정

--- a/src/ui/MovieList/MovieList.module.css
+++ b/src/ui/MovieList/MovieList.module.css
@@ -4,5 +4,13 @@
     @apply justify-start;
     @apply items-stretch;
     @apply h-full;
-    @apply overflow-hidden;
+    /*@apply overflow-hidden;*/
+}
+
+.content {
+    @apply h-full;
+}
+
+.cell {
+    @apply lg:p-4 p-2
 }
